# learnrust-xdiff

./: #.md  Cargo.toml  README.md
examples/: config.rs  create_test_file.rs  similar.rs
fixtures/: cmd_test.md  diff_test_txt1.txt  req.yml  test.yml
src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  utils.rs
src/config/: mod.rs  xdiff.rs  xreq.rs
