[package]
default-run = "xdiff-learn"
edition = "2021"
name = "rust_xlearn"
version = "0.1.0"

[[bin]]
name = "xdiff-learn"
path = "src/bin/xdiff.rs"

[[bin]]
name = "xreq-learn"
path = "src/bin/xreq.rs"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
atty = "0.2.14"
clap = {version = "4.0.18", features = ["derive"]}
console = "0.15.2"
dialoguer = "0.10.2"
http-serde = "1.1.2"
mime = "0.3.16"
reqwest = {version = "0.11.12", default-features = false, features = ["rustls-tls"]}
serde = "1.0.147"
serde_json = "1.0.87"
serde_qs = "0.10.1"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.14"
similar = {version = "2.2.0", features = ["inline", "unicode", "bytes"]}
syntect = "5.0.0"
tokio = {version = "1.21.2", features = ["full"]}
url = {version = "2.3.1", features = ["serde"]}

[dev-dependencies]
mockito = "0.31.0"
